--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset = "UTF-8">
-		<title>Вывод информации</title>
+		<title>ST-Twitter</title>
 		<link href = "style.css"  rel = "stylesheet"> 
 	
 		<script src="script.js" defer></script>
